<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingredients_header"
            tools:text = "Ingredients"
            android:textSize="@dimen/text_huge"
            android:padding="@dimen/padding_small"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/ingredients_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_medium"
                android:paddingRight="@dimen/padding_medium" />

        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/steps_header"
            tools:text="Steps"
            android:textSize="@dimen/text_huge"
            android:padding="@dimen/padding_small"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>