...
            android:id="@+id/thumbnail_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ImageView>

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/simple_video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

        <TextView
            android:id="@+id/no_media_available"
...
